option "ParThreads" can now be set to "0" (which is a default setting now) to let the program automatically determine the number of CPU cores; this works on major modern platforms)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1136 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -96,6 +96,9 @@
 /* Define to 1 if you have the <regex.h> header file. */
 #undef HAVE_REGEX_H
 
+/* Define to 1 if _SC_NPROCESSORS_ONLN is present in unistd.h */
+#undef HAVE_SC_NPROCESSORS_ONLN
+
 /* Define to 1 if spinlocks are supported */
 #undef HAVE_SPINLOCK
 
