--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1133,7 +1133,7 @@ ParQuick=yes
 # best repair performance.
 ParBuffer=16
 
-# Number of threads to use during par-repair (1-99).
+# Number of threads to use during par-repair (0-99).
 #
 # On multi-core CPUs for the best speed set the option to the number of
 # logical cores (physical cores + hyper-threading units). If you want
@@ -1141,7 +1141,10 @@ ParBuffer=16
 # to compensate for wait intervals used for thread synchronization.
 #
 # On single-core CPUs use only one thread.
-ParThreads=1
+#
+# Set to '0' to automatically use all available CPU cores (may not
+# work on old or exotic platforms).
+ParThreads=0
 
 # Files to ignore during par-check.
 #
