debug builds for Windows now print call stack on crash to the log-file, which is very useful for debugging
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1145 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -52,6 +52,8 @@ nzbget_SOURCES = \
 	daemon/main/Options.h \
 	daemon/main/Scheduler.cpp \
 	daemon/main/Scheduler.h \
+	daemon/main/StackTrace.cpp \
+	daemon/main/StackTrace.h \
 	daemon/nntp/ArticleDownloader.cpp \
 	daemon/nntp/ArticleDownloader.h \
 	daemon/nntp/ArticleWriter.cpp \
