--- a/Makefile.in
+++ b/Makefile.in
@@ -143,7 +143,8 @@ am__nzbget_SOURCES_DIST = daemon/connect/Connection.cpp \
 	daemon/main/Maintenance.h daemon/main/nzbget.cpp \
 	daemon/main/nzbget.h daemon/main/Options.cpp \
 	daemon/main/Options.h daemon/main/Scheduler.cpp \
-	daemon/main/Scheduler.h daemon/nntp/ArticleDownloader.cpp \
+	daemon/main/Scheduler.h daemon/main/StackTrace.cpp \
+	daemon/main/StackTrace.h daemon/nntp/ArticleDownloader.cpp \
 	daemon/nntp/ArticleDownloader.h daemon/nntp/ArticleWriter.cpp \
 	daemon/nntp/ArticleWriter.h daemon/nntp/Decoder.cpp \
 	daemon/nntp/Decoder.h daemon/nntp/NewsServer.cpp \
@@ -223,8 +224,9 @@ am_nzbget_OBJECTS = Connection.$(OBJEXT) TLS.$(OBJEXT) \
 	ColoredFrontend.$(OBJEXT) Frontend.$(OBJEXT) \
 	LoggableFrontend.$(OBJEXT) NCursesFrontend.$(OBJEXT) \
 	Maintenance.$(OBJEXT) nzbget.$(OBJEXT) Options.$(OBJEXT) \
-	Scheduler.$(OBJEXT) ArticleDownloader.$(OBJEXT) \
-	ArticleWriter.$(OBJEXT) Decoder.$(OBJEXT) NewsServer.$(OBJEXT) \
+	Scheduler.$(OBJEXT) StackTrace.$(OBJEXT) \
+	ArticleDownloader.$(OBJEXT) ArticleWriter.$(OBJEXT) \
+	Decoder.$(OBJEXT) NewsServer.$(OBJEXT) \
 	NNTPConnection.$(OBJEXT) ServerPool.$(OBJEXT) \
 	StatMeter.$(OBJEXT) ParChecker.$(OBJEXT) \
 	ParCoordinator.$(OBJEXT) ParRenamer.$(OBJEXT) \
@@ -396,7 +398,8 @@ nzbget_SOURCES = daemon/connect/Connection.cpp \
 	daemon/main/Maintenance.h daemon/main/nzbget.cpp \
 	daemon/main/nzbget.h daemon/main/Options.cpp \
 	daemon/main/Options.h daemon/main/Scheduler.cpp \
-	daemon/main/Scheduler.h daemon/nntp/ArticleDownloader.cpp \
+	daemon/main/Scheduler.h daemon/main/StackTrace.cpp \
+	daemon/main/StackTrace.h daemon/nntp/ArticleDownloader.cpp \
 	daemon/nntp/ArticleDownloader.h daemon/nntp/ArticleWriter.cpp \
 	daemon/nntp/ArticleWriter.h daemon/nntp/Decoder.cpp \
 	daemon/nntp/Decoder.h daemon/nntp/NewsServer.cpp \
@@ -727,6 +730,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Scheduler.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Script.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ServerPool.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/StackTrace.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/StatMeter.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/TLS.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Thread.Po@am__quote@
@@ -982,6 +986,20 @@ Scheduler.obj: daemon/main/Scheduler.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='daemon/main/Scheduler.cpp' object='Scheduler.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o Scheduler.obj `if test -f 'daemon/main/Scheduler.cpp'; then $(CYGPATH_W) 'daemon/main/Scheduler.cpp'; else $(CYGPATH_W) '$(srcdir)/daemon/main/Scheduler.cpp'; fi`
+
+StackTrace.o: daemon/main/StackTrace.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT StackTrace.o -MD -MP -MF "$(DEPDIR)/StackTrace.Tpo" -c -o StackTrace.o `test -f 'daemon/main/StackTrace.cpp' || echo '$(srcdir)/'`daemon/main/StackTrace.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/StackTrace.Tpo" "$(DEPDIR)/StackTrace.Po"; else rm -f "$(DEPDIR)/StackTrace.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='daemon/main/StackTrace.cpp' object='StackTrace.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o StackTrace.o `test -f 'daemon/main/StackTrace.cpp' || echo '$(srcdir)/'`daemon/main/StackTrace.cpp
+
+StackTrace.obj: daemon/main/StackTrace.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT StackTrace.obj -MD -MP -MF "$(DEPDIR)/StackTrace.Tpo" -c -o StackTrace.obj `if test -f 'daemon/main/StackTrace.cpp'; then $(CYGPATH_W) 'daemon/main/StackTrace.cpp'; else $(CYGPATH_W) '$(srcdir)/daemon/main/StackTrace.cpp'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/StackTrace.Tpo" "$(DEPDIR)/StackTrace.Po"; else rm -f "$(DEPDIR)/StackTrace.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='daemon/main/StackTrace.cpp' object='StackTrace.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o StackTrace.obj `if test -f 'daemon/main/StackTrace.cpp'; then $(CYGPATH_W) 'daemon/main/StackTrace.cpp'; else $(CYGPATH_W) '$(srcdir)/daemon/main/StackTrace.cpp'; fi`
 
 ArticleDownloader.o: daemon/nntp/ArticleDownloader.cpp
 @am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ArticleDownloader.o -MD -MP -MF "$(DEPDIR)/ArticleDownloader.Tpo" -c -o ArticleDownloader.o `test -f 'daemon/nntp/ArticleDownloader.cpp' || echo '$(srcdir)/'`daemon/nntp/ArticleDownloader.cpp; \
