additional parameters (env. vars) are now passed to scan scripts: NZBNP_DUPEKEY, NZBNP_DUPESCORE, NZBNP_DUPEMODE; scan-scripts can now set dupekey, dupemode and dupescore by printing new special commands
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1146 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1448,7 +1448,10 @@ PostScript=
 #  NZBNP_TOP  	   - flag indicating that the file will be added to the top
 #                    of queue: 0 or 1;
 #  NZBNP_PAUSED	   - flag indicating that the file will be added as
-#                    paused: 0 or 1.
+#                    paused: 0 or 1;
+#  NZBNP_DUPEKEY   - duplicate key of nzb-file;
+#  NZBNP_DUPESCORE - duplicate score of nzb-file;
+#  NZBNP_DUPEMODE  - duplicate mode of nzb-file: SCORE, ALL, FORCE.
 #
 # In addition to these arguments NZBGet passes all nzbget.conf-options 
 # as environment variables. These variables have prefix "NZBOP_" and
@@ -1502,6 +1505,15 @@ PostScript=
 #
 # To change paused-flag (nzb-file will be added in paused state):
 #   echo "[NZB] PAUSED=1";
+#
+# To change duplicate key:
+#   echo "[NZB] DUPEKEY=tv show s01e02";
+#
+# To change duplicate score:
+#   echo "[NZB] DUPESCORE=integer_value";
+#
+# To change duplicate mode:
+#   echo "[NZB] DUPEMODE=(SCORE|ALL|FORCE)";
 #
 # The script can delete processed file, rename it or move somewhere.
 # After the calling of the script the file will be either added to queue
