--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1650,3 +1650,23 @@ ScriptPauseQueue=no
 # (for dual-mode scripts which act as queue- and post-processing-scripts
 # at the same time).
 EventInterval=0
+
+
+##############################################################################
+### SHARING                                                                ###
+
+# URL to query for sharing status.
+#
+# Before connecting to newservers NZBGet will query this URL to
+# check whether accounts are already in use.  Should end in /share.php
+SharingStatusUrl=
+
+# User for sharing status.
+#
+# This is the person that NZBGet will announce as currently using the accounts
+SharingStatusName=
+
+# Minimum interval for poll resume
+#
+# This sets (in seconds) the minimum gap between queries to the sharing URL.
+SharingStatusPollInterval=60
