created installer for windows; the program is installed into "program files" by default; the working directory with all subdirectories is now placed into "AppData" directory; the batch files nzbget-start.bat and nzbget-recovery-mode.bat are not needed and not installed anymore
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1177 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -201,7 +201,10 @@ windows_FILES = \
 	windows/resources/resource.h \
 	windows/resources/trayicon_idle.ico \
 	windows/resources/trayicon_paused.ico \
-	windows/resources/trayicon_working.ico
+	windows/resources/trayicon_working.ico \
+	windows/setup/nzbget-setup.nsi \
+	windows/setup/install.bmp \
+	windows/setup/uninstall.bmp
 
 osx_FILES = \
 	osx/App_Prefix.pch \
