options "ParIgnoreExt" and "ExtCleanupDisk" can now contain wildcard characters * and ?
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1178 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1148,9 +1148,10 @@ ParThreads=0
 
 # Files to ignore during par-check.
 #
-# List of file extensions or file names to ignore by par-rename and
-# par-check. The entries must be separated with commas. The entries
-# can be file extensions or any text the file name may end with.
+# List of file extensions, file names or file masks to ignore by
+# par-rename and par-check. The entries must be separated with
+# commas. The entries can be file extensions, any text the file name
+# may end with or file masks containing wildcard characters * and ?.
 #
 # If par-rename or par-check detect missing or damaged files they
 # will ignore files matching this option and will not initiate
@@ -1212,20 +1213,6 @@ ParPauseQueue=no
 # from download queue after successful check/repair.
 ParCleanupQueue=yes
 
-# Files to delete after successful check/repair.
-#
-# List of file extensions or file names to delete after successful
-# download. The entries must be separated with commas. The entries 
-# can be file extensions or any text the file name may end with.
-#
-# Files or extensions listed here are also ignored by par-rename
-# and par-check.
-#
-# NOTE: See also option <ParIgnoreExt>.
-#
-# Example: .par2, .sfv
-ExtCleanupDisk=.par2, .sfv, _brokenlog.txt
-
 
 ##############################################################################
 ### UNPACK                                                                 ###
@@ -1273,6 +1260,21 @@ UnrarCmd=unrar
 # If 7-Zip binary is in your PATH you may leave the path part and set only
 # the executable name ("7z" or "7za" on POSIX or "7z.exe" on Windows).
 SevenZipCmd=7z
+
+# Files to delete after successful download.
+#
+# List of file extensions, file names or file masks to delete after
+# successful unpack or successful par-check (if the unpack was not
+# performed). The entries must be separated with commas. The
+# entries can be file extensions, any text the file name may end with
+# or file masks containing wildcard characters * and ?.
+#
+# Files listed here are also ignored by par-rename and par-check.
+#
+# NOTE: See also option <ParIgnoreExt>.
+#
+# Example: .par2, .sfv
+ExtCleanupDisk=.par2, .sfv, _brokenlog.txt
 
 
 ##############################################################################
