added new option "ServerX.Retention" to define server retention time (days); files older than configured server retention time are not even tried on this server
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1179 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -196,6 +196,16 @@ Server1.Cipher=
 # Maximum number of simultaneous connections to this server (0-999).
 Server1.Connections=4
 
+# Server retention time (days).
+#
+# How long the articles are stored on the news server. The articles
+# whose age exceed the defined server retention time are not tried on
+# this news server, the articles are instead considered failed on this
+# news server.
+#
+# Value "0" disables retention check.
+Server1.Retention=0
+
 # Second server, on level 0.
 
 #Server2.Level=0
