options "UnrarCmd" and "SevenZipCmd" can include extra switches to pass to unrar/7-zip. This allows for easy passing of additional parameters without creating of proxy shell scripts.
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1180 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1259,6 +1259,24 @@ UnpackCleanupDisk=yes
 #
 # Example: /usr/bin/unrar.
 #
+# The option can also contain extra switches to pass to unrar. To the 
+# here defined command line NZBGet adds the following switches:
+#    x -y -p- -o+ *.rar ./_unpack/
+#
+# Switch "x" is added only if neither "x" nor "e" were defined in
+# the option (this allows you to use switch "e" instead of "x"). switch
+# "-o+" is added only if neither "-o+" nor "-o-" were defined
+# in the command line. All other paramaters are always added. Parameter
+# "-p-" is replaced with "-ppassword" if a password is set for nzb-file.
+#
+# Examples:
+# 1) ignore file attributes (pemissions):
+# /usr/bin/unrar x -ai;
+# 2) decrease priority of unrar-process:
+# nice -n 19 unrar.
+#
+# For other useful switches refer to unrar documentation.
+#
 # If unrar is in your PATH you may leave the path part and set only
 # the executable name ("unrar" on POSIX or "unrar.exe" on Windows).
 UnrarCmd=unrar
@@ -1266,6 +1284,8 @@ UnrarCmd=unrar
 # Full path to 7-Zip executable.
 #
 # Example: /usr/bin/7z.
+#
+# Similar to option <UnrarCmd> this option can also include extra switches.
 #
 # If 7-Zip binary is in your PATH you may leave the path part and set only
 # the executable name ("7z" or "7za" on POSIX or "7z.exe" on Windows).
