improved news server connections handling: if a download of an article fails due to connection error the news server becomes temporary disabled (blocked) for several seconds (defined by option "RetryInterval"); the download is then retried on another news server (of the same level) if available; if no other news servers (of the same level) exist the program will retry the same news server after its block interval expires; this increases failure tolerance when multiple news servers are used
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1182 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -717,27 +717,29 @@ CrcCheck=yes
 
 # How many retries should be attempted if a download error occurs (0-99).
 #
-# 1) If download fails because of "article or group not found error" the
-# program tries another news server.
-#
-# 2) If download fails because of interrupted connection, the program
-# tries the same server again until connection can be established.
-#
-# In both cases 1) and 2) option <Retries> is not used.
-#
-# If download however fails because of incomplete article, CRC-error or other
-# error not mentioned above the program tries to redownload the article from
-# the same news server as many times as defined in option <Retries>. If all
+# If download fails because of incomplete or damaged article or due to
+# CRC-error the program tries to redownload the article from the same
+# news server as many times as defined in option <Retries>. If all
 # attempts fail the program tries another news server.
+#
+# If download fails because of "article or group not found error" the
+# program tries another news server without retrying on the failed server.
+#
+# If download fails because of interrupted connection the program
+# tries another news server or the same server after the block interval
+# expires.
 Retries=3
 
-# Set the interval between retries (seconds).
+# Wait interval between retries (seconds).
+#
+# If download of an article fails because of interrupted connection
+# the server is temporary blocked until the retry interval expires.
 RetryInterval=10
 
-# Set connection timeout for article downloading (seconds).
+# Connection timeout for article downloading (seconds).
 ArticleTimeout=60
 
-# Set connection timeout for URL fetching (seconds).
+# Connection timeout for URL fetching (seconds).
 #
 # This includes fetching of nzb-files via URLs and fetching of RSS feeds.
 UrlTimeout=60
