added support for password list file; new option "UnpackPassFile" to set the location of the file; during unpack the passwords are tried from the file until unpack succeeds or all passwords were tried; implemented different strategies for rar4 and rar5-archives taking into account the features of formats; for rar5-archives a wrong password is reported by unrar unambiguously and the program can immediately try other passwords from the password list; for rar4-archives and for 7z-archives it is not possible to differentiate between damaged archive and wrong password; for those archives if the first unpack attempt (without password) fails the program executes par-check (preferably quick par-check if enabled via option "ParQuick) before trying the passwords from the list; another optimization is that the password list is tried only when the first unpack attempt (without password) reports a password error or decryption errors; this saves unnecessary unpack attempts for damaged unencrypted archives
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1189 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1308,6 +1308,18 @@ SevenZipCmd=7z
 # Example: .par2, .sfv
 ExtCleanupDisk=.par2, .sfv, _brokenlog.txt
 
+# Path to file containing unpack passwords.
+#
+# If the option is set the program will try all passwords from the file
+# when unpacking the archives. The file must be a text file containing
+# one password per line.
+#
+# If an nzb-file has a defined password (in the post-processing settings)
+# then the password-file is not used for that nzb-file.
+#
+# NOTE: Trying multiple passwords is a time consuming task. Whenever possible
+# passwords should be set per nzb-file in their post-processing settings. 
+UnpackPassFile=
 
 ##############################################################################
 ### EXTENSION SCRIPTS                                                      ###
