--- a/osx/NZBGet-Info.plist
+++ b/osx/NZBGet-Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>13.0-testing-r1011M</string>
+	<string>15.0-testing</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
@@ -25,7 +25,7 @@
 	<key>LSUIElement</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2007-2014 Andrey Prygunkov</string>
+	<string>Copyright © 2007-2015 Andrey Prygunkov</string>
 	<key>NSMainNibFile</key>
 	<string>MainApp</string>
 	<key>NSPrincipalClass</key>
