Add option to turn off account sharing

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1655,6 +1655,12 @@ EventInterval=0
 ##############################################################################
 ### SHARING                                                                ###
 
+# Enable account sharing (yes, no).
+#
+# Enable this to check whether accounts are already in use before beginning
+# a download.  Download will always be allowed if disabled.
+SharingStatusEnabled=yes
+
 # URL to query for sharing status.
 #
 # Before connecting to newservers NZBGet will query this URL to
