added restricted user and add-user; restricted user has access to most program functions but cannot see security related options (including usernames and passwords) and cannot save configuration; restricted user can be used with other programs and web-sites; add-user can only add new downloads via RPC-API and can be used with other programs or web-sites
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1217 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -268,6 +268,47 @@ ControlUsername=nzbget
 # Set to empty value to disable authorization request.
 ControlPassword=tegbzn6789
 
+# User name for restricted access.
+#
+# Restricted user has control over the program with few restrictions. He
+# can not change program settings and can not view security related
+# options or options provided by extension scripts. This user still
+# has access to web-interface and can see most program settings
+# (but can't change any).
+#
+# Use this user to connect to NZBGet from other programs and web-sites.
+#
+# In terms of RPC-API the user:
+# - cannot use method "saveconfig";
+# - methods "config" and "saveconfig" return string "***" for
+#   options those content is protected from the user.
+#
+# Set to empty value to disable restricted user.
+RestrictedUsername=
+
+# Password for restricted access.
+#
+# Set to empty value to disable password check.
+RestrictedPassword=
+
+# User name to add downloads via RPC-API.
+#
+# Use the AddUsername/AddPassword to give other programs or web-services
+# access to NZBGet with only two permissions:
+# - add new downloads using RPC-method "append";
+# - check program version using RPC-method "version".
+#
+# In a case the program/web-service needs more rights use the restricted
+# user instead (option <RestrictedUsername> and option <RestrictedPassword>).
+#
+# Set to empty value to disable add-user.
+AddUsername=
+
+# Password for user with add downloads access.
+#
+# Set to empty value to disable password check.
+AddPassword=
+
 # Secure control of NZBGet server (yes, no).
 #
 # Activate the option if you want to access NZBGet built-in web-server 
@@ -288,7 +329,8 @@ SecureKey=
 # IP-addresses allowed to connect without authorization.
 #
 # Comma separated list of privileged IPs for easy access to NZBGet
-# built-in web-server (web-interface and RPC).
+# built-in web-server (web-interface and RPC). The connected clients
+# have full unrestricted access.
 #
 # Example: 127.0.0.1,192.168.178.2.
 #
