addition to r1217: rewritten descriptions of new options
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1220 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -270,11 +270,10 @@ ControlPassword=tegbzn6789
 
 # User name for restricted access.
 #
-# Restricted user has control over the program with few restrictions. He
+# Restricted user can control the program with few restrictions. He
+# has access to web-interface and can see most program settings. He
 # can not change program settings and can not view security related
-# options or options provided by extension scripts. This user still
-# has access to web-interface and can see most program settings
-# (but can't change any).
+# options or options provided by extension scripts.
 #
 # Use this user to connect to NZBGet from other programs and web-sites.
 #
@@ -284,6 +283,9 @@ ControlPassword=tegbzn6789
 #   options those content is protected from the user.
 #
 # Set to empty value to disable restricted user.
+#
+# NOTE: Don't forget to change default username/password of the control
+# user (options <ControlUsername> and <ControlPassword>).
 RestrictedUsername=
 
 # Password for restricted access.
@@ -299,9 +301,12 @@ RestrictedPassword=
 # - check program version using RPC-method "version".
 #
 # In a case the program/web-service needs more rights use the restricted
-# user instead (option <RestrictedUsername> and option <RestrictedPassword>).
+# user instead (options <RestrictedUsername> and <RestrictedPassword>).
 #
 # Set to empty value to disable add-user.
+#
+# NOTE: Don't forget to change default username/password of the control
+# user (options <ControlUsername> and <ControlPassword>).
 AddUsername=
 
 # Password for user with add downloads access.
