each nzb now has its own individual log, where messages printed during download or post-processing are saved; the messages can be retrieved later at any time; new button "Log" in the history details dialog; button "Log" in the download details dialog is now active during download too (not only during post-processing); the log contains all nzb-related messages except detail-messages and errors printed during retrieving of articles (they would produce way too many messages and are not that useful anyway); new option "NzbLog" to deactivate per-nzb logging if necessary; per-nzb logs are saved in the queue-directory (option "QueueDir"); new RPC-method "loadlog" returns the previously saved messages for a given nzb-file; new field "MessageCount" is returned by RPC-methods "listgroups" and "history" and indicates if there are any messages saved for the item; parameter "NumberOfLogEntries" of RPC-method "listgroups" and the field "Log" returned by the method are now deprecated, use method "loadlag" instead; field "PostInfoText" returned by RPC-method "listgroups" is now automatically filled with the latest message printed by a pp-script eliminating the need to access deprecated field "Log"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1221 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -917,7 +917,6 @@ WriteLog=append
 # (option <WriteLog> is set to "rotate").
 RotateLog=3
 
-
 # How error messages must be printed (screen, log, both, none).
 ErrorTarget=both
 
@@ -940,7 +939,13 @@ DebugTarget=both
 # clients (messages).
 LogBufferSize=1000
 
-# Create a log of all broken files (yes ,no).
+# Create log for each downloaded nzb-file (yes, no).
+#
+# The messages are saved for each download separately and can be viewed
+# at any time in download details dialog or history details dialog.
+NzbLog=yes
+
+# Create a log of all broken files (yes, no).
 #
 # It is a text file placed near downloaded files, which contains
 # the names of broken files.
