renamed option "CreateBrokenLog" to "BrokenLog"; the old option name is recognized and automatically converted when the configuration is saved in web-interface
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1222 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -949,7 +949,7 @@ NzbLog=yes
 #
 # It is a text file placed near downloaded files, which contains
 # the names of broken files.
-CreateBrokenLog=yes
+BrokenLog=yes
 
 # Create memory dump (core-file) on abnormal termination, Linux only (yes, no).
 #
