added built-in update feature to windows package; accessible via web-interface -> settings -> system -> check for updates
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1226 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -195,7 +195,10 @@ windows_FILES = \
 	daemon/windows/WinConsole.h \
 	nzbget.sln \
 	nzbget.vcproj \
-	nzbget-shell.bat  \
+	windows/nzbget-command-shell.bat  \
+	windows/install-update.bat  \
+	windows/README-WINDOWS.txt  \
+	windows/package-info.json  \
 	windows/resources/mainicon.ico \
 	windows/resources/nzbget.rc \
 	windows/resources/resource.h \
