improved cleanup: if download was successful with health 100% the cleanup is now performed even if par-check and unpack were not made; previously a successful par-check or unpack were required for cleanup
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1227 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1214,8 +1214,11 @@ ParThreads=0
 #
 # List of file extensions, file names or file masks to ignore by
 # par-rename and par-check. The entries must be separated with
-# commas. The entries can be file extensions, any text the file name
-# may end with or file masks containing wildcard characters * and ?.
+# commas.
+#
+# The entries must be separated with commas. The entries can be file
+# extensions, file names or file masks containing wildcard
+# characters * and ?.
 #
 # If par-rename or par-check detect missing or damaged files they
 # will ignore files matching this option and will not initiate
@@ -1348,10 +1351,14 @@ SevenZipCmd=7z
 # Files to delete after successful download.
 #
 # List of file extensions, file names or file masks to delete after
-# successful unpack or successful par-check (if the unpack was not
-# performed). The entries must be separated with commas. The
-# entries can be file extensions, any text the file name may end with
-# or file masks containing wildcard characters * and ?.
+# successful download. If either unpack or par-check fail the cleanup is
+# not performed. If neither unpack nor par-check were made (because they
+# were disabled or the download doesn't contain archives and/or par-files
+# the cleanup is performed if the health is 100%.
+#
+# The entries must be separated with commas. The entries can be file
+# extensions, file names or file masks containing wildcard
+# characters * and ?.
 #
 # Files listed here are also ignored by par-rename and par-check.
 #
