updated desription of few options
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1239 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1238,8 +1238,9 @@ ParIgnoreExt=.sfv, .nzb, .nfo
 #  None   - do nothing (continue download).
 #
 # NOTE: For automatic duplicate handling option must be set to "Delete"
-# or "None". If it is set to "Pause" you will need to manually unpause
-# another duplicate (if any exists in queue). See also option <DupeCheck>.
+# or "None". If it is set to "Pause" you will need to manually return
+# another duplicate to queue (if any exists in history). See also
+# option <DupeCheck>.
 HealthCheck=delete
 
 # Maximum allowed time for par-repair (minutes).
@@ -1639,13 +1640,14 @@ PostScript=
 # http://nzbget.net/Extension_scripts.
 ScanScript=
 
-# List of queue scripts to execute after a nzb-file is added to queue.
+# List of queue scripts to execute on queue events.
 #
 # The scripts in the list must be separated with commas or semicolons. Only
 # filenames without path must be used. All scripts must be stored in directory
 # pointed by option <ScriptDir>. 
 #
-# The scripts are executed each time a new file is added to queue.
+# The scripts are executed on certain queue events such as adding
+# a new nzb-file to queue, etc.
 #
 # Example: DeleteQueueSamples.sh, NzbAddedNotify.py.
 #
