partially reverted back r1233: the program terminates if the lock-file cannot be created or the lock could not be acquired and an error message is printed to the log-file; the termination prevents unintentional starting of multiple daemon instances (daemon mode, POSIX only)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1243 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -85,8 +85,14 @@ ScriptDir=${MainDir}/scripts
 
 # Lock-file for daemon-mode, POSIX only.
 #
-# If the option is not empty, NZBGet creates the file and writes process-id
-# (PID) into it. That info can be used in shell scripts.
+# When started in daemon mode the program creates the lock file and
+# writes process-id (PID) into it. That info can be used in shell
+# scripts. If the lock file can not be created or the lock to the file
+# can not be acquired the daemon terminates, preventing unintentional
+# starting of multiple daemons.
+#
+# Set to empty value to disable the creating of the lock-file and the
+# check for another running instance (not recommended).
 LockFile=${MainDir}/nzbget.lock
 
 # Where to store log file, if it needs to be created.
